--- a/assets/css/agency.css
+++ b/assets/css/agency.css
@@ -248,7 +248,7 @@ header {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../image/home.jpg) no-repeat center center;
+    background: url(../image/home.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
