--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -166,7 +166,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../image/home.jpg) no-repeat center center;
+    background: url(../image/home.png) no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
